# pg-collectd

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  docker-compose.yml  release.sh  release.toml
.github/workflows/: ci.yml
assets/: Dockerfile.tests  Dockerfile.timescale  ci-test.sh  schema.sql  setup-timescale.sh
ci/: before_deploy.sh  script.sh
src/: config.rs  errors.rs  inserter.rs  lib.rs  plugin.rs
