[package]
name = "pg-collectd"
version = "0.1.1-pre"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Provides an alternative and opinionated postgres collectd writer"
repository = "https://github.com/nickbabcock/pg_collectd"
readme = "README.md"
license = "MIT"
publish = false

[package.metadata.deb]
extended-description = "See project readme for extended description"
assets = [
  ["target/release/libpg_collectd.so", "usr/lib/collectd/pg_collectd.so", "644"]
]

[package.metadata.deb.variants.collectd54]
depends = "collectd (>= 5.4.0), collectd (<< 5.5.0)"

[package.metadata.deb.variants.collectd55]
depends = "collectd (>= 5.5.0), collectd (<< 5.6.0)"

[package.metadata.deb.variants.collectd57]
depends = "collectd (>= 5.6.0)"

[dependencies]
failure = "0.1.3"
log = "0.4.6"
serde = "1"
serde_derive = "1"
parking_lot = "0.6"
csv = "1"
collectd-plugin = "0.8.3"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]

[lib]
crate-type = ["cdylib"]
name = "pg_collectd"

[features]
bindgen = ["collectd-plugin/bindgen"]
