[package]
name = "pg-collectd"
version = "0.1.6-pre"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Provides an alternative and opinionated postgres collectd writer"
repository = "https://github.com/nickbabcock/pg_collectd"
readme = "README.md"
edition = "2018"
license = "MIT"
publish = false

[package.metadata.deb]
extended-description = "See project readme for extended description"
assets = [
  ["target/release/libpg_collectd.so", "usr/lib/collectd/pg_collectd.so", "644"]
]

[package.metadata.deb.variants.collectd54]
depends = "collectd (>= 5.4.0), collectd (<< 5.5.0)"

[package.metadata.deb.variants.collectd55]
depends = "collectd (>= 5.5.0), collectd (<< 5.6.0)"

[package.metadata.deb.variants.collectd57]
depends = "collectd (>= 5.6.0)"

[dependencies]
parking_lot = "0.9"
csv = "1"
collectd-plugin = "0.10.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.log]
version = "0.4.8"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]

[lib]
crate-type = ["cdylib"]
name = "pg_collectd"

[features]
bindgen = ["collectd-plugin/bindgen"]
