[package]
name = "pg-collectd"
version = "0.2.1-pre"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Provides an alternative and opinionated postgres collectd writer"
repository = "https://github.com/nickbabcock/pg_collectd"
readme = "README.md"
edition = "2018"
license = "MIT"
publish = false

[package.metadata.deb]
extended-description = "See project readme for extended description"
assets = [
  ["target/release/libpg_collectd.so", "usr/lib/collectd/pg_collectd.so", "644"]
]
depends = "collectd (>= 5.6.0)"

[dependencies]
parking_lot = "0.12"
csv = "1"
collectd-plugin = "0.14"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.log]
version = "0.4.20"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.postgres]
version = "0.19"
features = ["with-chrono-0_4"]

[lib]
crate-type = ["cdylib"]
name = "pg_collectd"

[features]
bindgen = ["collectd-plugin/bindgen"]
